[package]
name = "config-reader-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.15", features = ["full"] }
quote = { version = "1.0.27" }
proc-macro2 = { version = "*" }
