[package]
name = "rendering-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0.40" }
barcode-rs = "0.1.0"
femtovg = "*"
imageproc = "*"
lazy_static = "*"
image = "*"
rusttype = "*"
